--- a/packages/styles/bpmn-modeler.scss
+++ b/packages/styles/bpmn-modeler.scss
@@ -1,3 +1,8 @@
+@import "bpmn-js/dist/assets/diagram-js.css";
+@import "bpmn-js/dist/assets/bpmn-font/css/bpmn.css";
+@import "bpmn-js/dist/assets/bpmn-font/css/bpmn-codes.css";
+@import "bpmn-js/dist/assets/bpmn-font/css/bpmn-embedded.css";
+
 .bpmn-modeler {
   width: 100%;
   height: 100%;
